fix: call from swagger not work
