# docs/swagger.json
@@ -1,7 +1,116 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "Sophisticated K-Tax API",
+        "title": "K-Tax API",
+        "contact": {},
+        "version": "1.0"
     },
-    "paths": {}
+    "host": "localhost:8080",
+    "basePath": "/",
+    "paths": {
+        "/tax/calculations": {
+            "post": {
+                "description": "Calculate tax",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tax"
+                ],
+                "summary": "Calculate tax",
+                "parameters": [
+                    {
+                        "description": "Amount to calculate tax",
+                        "name": "amount",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/tax.TaxInformation"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/tax.TaxResult"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/tax.Err"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/tax.Err"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "tax.Allowance": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "type": {
+                    "$ref": "#/definitions/tax.AllowanceType"
+                }
+            }
+        },
+        "tax.AllowanceType": {
+            "type": "string",
+            "enum": [
+                "donation",
+                "k-receipt"
+            ],
+            "x-enum-varnames": [
+                "AllowanceTypeDonation",
+                "AllowanceTypeKReceipt"
+            ]
+        },
+        "tax.Err": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "tax.TaxInformation": {
+            "type": "object",
+            "properties": {
+                "allowances": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/tax.Allowance"
+                    }
+                },
+                "totalIncome": {
+                    "type": "number"
+                },
+                "wht": {
+                    "type": "number"
+                }
+            }
+        },
+        "tax.TaxResult": {
+            "type": "object",
+            "properties": {
+                "tax": {
+                    "type": "number"
+                }
+            }
+        }
+    }
 }
